--- a/client/src/components/Auth/auth.css
+++ b/client/src/components/Auth/auth.css
@@ -22,7 +22,10 @@ form {
 .auth form {
   width: 400px;
 }
-
+.password-container {
+  display: flex;
+  gap: 20px;
+}
 @media screen and (max-width: 900px) {
   .auth {
     margin-top: 100px;
@@ -46,7 +49,10 @@ form {
     max-width: 100%;
     margin-top: 20px;
   }
-  ..card-container input {
+  .card-container input {
     width: 100%;
+  }
+  .password-container {
+    flex-direction: column;
   }
 }
