--- a/client/src/components/Home/Home.css
+++ b/client/src/components/Home/Home.css
@@ -48,6 +48,9 @@
 .recipe-card img {
   border-radius: inherit;
   max-width: 100%;
+  width: 100%;
+  max-height: 55%;
+  object-fit: cover;
 }
 .recipe-card .content {
   padding: 30px;
