--- a/client/src/components/Footer/Footer.css
+++ b/client/src/components/Footer/Footer.css
@@ -3,6 +3,6 @@
   color: white;
   text-align: center;
   padding: 1rem 0;
-  margin-top: 100px;
+  /* margin-top: 100px; */
   letter-spacing: 0.5px;
 }
